--- a/paper.bib
+++ b/paper.bib
@@ -1,13 +1,13 @@
 @article{sdn-enabled,
-	Author = {Jon Matias and Jokin Garay and Nerea Toledo and Juanjo Unzilla and Eduardo Jacob},
-	Doi = {10.1109/mcom.2015.7081093},
-	Issn = {0163-6804},
-	Journal = {IEEE Communications Magazine},
-	Month = {04},
-	Number = {4},
-	Pages = {187-193},
-	Publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
-	Title = {Toward an SDN-enabled NFV architecture},
-	Volume = {53},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1109/mcom.2015.7081093}}
+	doi = {10.1109/mcom.2015.7081093},
+	url = {https://doi.org/10.1109%2Fmcom.2015.7081093},
+	year = 2015,
+	month = {apr},
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {53},
+	number = {4},
+	pages = {187--193},
+	author = {Jon Matias and Jokin Garay and Nerea Toledo and Juanjo Unzilla and Eduardo Jacob},
+	title = {Toward an {SDN}-enabled {NFV} architecture},
+	journal = {{IEEE} Communications Magazine}
+}
