--- a/paper.tex
+++ b/paper.tex
@@ -543,7 +543,7 @@ Our object is to demonstrate that our vCPE system can help the telco to reduce t
 \subsection{vCPE Service Design Overview} \label{ssec:service_design}
 \begin{figure}[!t]
   \centering
-  \includegraphics[width=3in]{./figures/service_design_overview}
+  \includegraphics[width=3in]{./figures/system_overview_v2}
   \caption{vCPE Service Design Architecture}
   \label{fig:service_overview}
 \end{figure}
@@ -572,6 +572,14 @@ In figure \ref{fig:vcpe_deploy} illustrated the service deployment model, each g
 
 \subsection{Architecture of the vCPE system} \label{ssec:vcpe_archi}
 \subsubsection{System Overview}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3in]{./figures/system_overview_v2}
+\caption{Service Syetem Overview}
+\label{fig:vcpe_system}
+\end{figure}
+
+The architecture as shown in Fig \ref{fig:vcpe_system} including of a Infrastructure Controller, Infrastructure Orchestrator, Cloud Database, VNF Controllers and VNF Orchestrator. The Infrastructure Orchestrator, VNF Orchestrator and Cloud Database are web servers running on virtual machines hosting in the cloud using Amazon Web Services (AWS) Data Center also the Infrastructure Controller is a powerful physical blade server running in our laboratory. Each component is introduced in the subsection below.
 
 \subsubsection{Infrastructure Controller}
 % shipyard
@@ -583,20 +591,29 @@ The infrasctructure orchestrator plays the key role of our system. It connecting
 
 
 \subsubsection{Cloud Database}
-% api server
-
-\subsubsection{VNF Orchestrator}
-% web server
+%
+The cloud database is used for restoreing the of our vCPE services, which include each customer's credential, customer's container settings and virtual CPE service states. The cloud database is using PostgreSQL, which is a open source, easily customized and object-relational database system. Only Infrastructure Orchestrator has read and write permissions to access cloud database.
 
 \subsubsection{VNF Controllers}
 % sdn controller
 
-
-\section{Virtula CPE Services}
-
+VNF Controllers contains a SDN controller developed with ryu framework and a remote launcher module. The SDN controller does not have a remote launcher module to remotely execute a SDN controller. We built a light-weight server as a launcher module to resolve the remotely execution issue. The remote launcher module monitor the SDN controller process ID (PID) and properly kill the SDN controller process ID when on demand. When the infrastructure controller once create the container, the remote module will run up initiallly, waiting request from VNF VNF Orchestrator. The details of SDN controller desgin will be presented at section \ref{ssec:vcpe_services}
 
 
+\subsubsection{VNF Orchestrator}
+% web server
+The VNF Orchestrator is a Web application server hosting on Amazon Web server, being online for customer and provide a dashboard for virtual CPE and containers management and configuration.
 
+Through the web UI provided by the VNF Orchestrator, the customers can subscribe to the desired service and without typing any command via the command line interface (CLI).  After receiving the subscribing message, the VNF orchestrator will request the infrastructure orchestrator to create a new VNF controller, and then send the virtual CPE configuration to the new VNF controller.  Based on configuration demands under different conditions, the network administrator is able to select any of the listed services on the dashboard such as NAT, DHCP, Firewall and QoS management.
+
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3in]{./figures/vnf_orche_view}
+\caption{Virtual CPE Dashboard User Interface for Container Management}
+\label{fig:vcpe_dashboard}
+\end{figure}
+
+\section{Virtual CPE Services} \label{ssec:vcpe_services}
 
 \newpage
 
