add decription of multi-table

--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,11 @@
+@techreport{onf-multi-tables,
+	Author = {Open Networking Foundation},
+	Title = {The benefits of multiple flow tables and TTPs},
+	Url = {https://www.opennetworking.org/images/stories/downloads/sdn-resources/technical-reports/TR\_Multiple\_Flow\_Tables\_and\_TTPs.pdf},
+	Urldate = {2017-02-17},
+	Year = {2015},
+	Bdsk-Url-1 = {https://www.opennetworking.org/images/stories/downloads/sdn-resources/technical-reports/TR%5C_Multiple%5C_Flow%5C_Tables%5C_and%5C_TTPs.pdf}}
+
 @article{sdn-enabled,
 	doi = {10.1109/mcom.2015.7081093},
 	url = {https://doi.org/10.1109%2Fmcom.2015.7081093},
