--- a/paper.tex
+++ b/paper.tex
@@ -107,7 +107,7 @@
 % noadjust option (cite.sty V3.8 and later) if you want to turn this off
 % such as if a citation ever needs to be enclosed in parenthesis.
 % cite.sty is already installed on most LaTeX systems. Be sure and use
-% version 5.0 (2009-03-20) and later if using hyperref.sty.
+% version 5.0 (2009-03-20) and later if using hype rref.sty.
 % The latest version can be obtained at:
 % http://www.ctan.org/pkg/cite
 % The documentation is contained in the cite.sty file itself.
@@ -296,7 +296,7 @@
 % description of each subfigure *somewhere* and endfloat does not add
 % subfigure captions to its list of figures. Thus, the best approach is to
 % avoid the use of subfigure captions (many IEEE journals avoid them anyway)
-% and instead reference/explain all the subfigures within the main caption.
+% and instead  reference/explain all the subfigures within the main caption.
 % The latest version of endfloat.sty and its documentation can obtained at:
 % http://www.ctan.org/pkg/endfloat
 %
@@ -489,7 +489,7 @@
 %
 % Note that often IEEE papers with subfigures do not employ subfigure
 % captions (using the optional argument to \subfloat[]), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
+%  reference/describe all of them (a), (b), etc., within the main caption.
 % Be aware that for subfig.sty to generate the (a), (b), etc., subfigure
 % labels, the optional argument to \subfloat must be present. If a
 % subcaption is not desired, just leave its contents blank,
@@ -537,7 +537,7 @@
 
 
 \section{vCPE System Overview}
-Our object is to demonstrate that our vCPE system can help the telco to reduce the Capex and Opex when deploying, maintaining and updating CPE service. This section describes our vCPE system architecture and how we achieve our goal. In the subsection\ref{ssec:service_design}, we will introduce the overview architecture of our virtual CPE Service. Then in subsection\ref{ssec:vcpe_deploy}, we will explain that through the advantages of service architecture, our vCPE system can deploy our service to the customer easily. In the subsection\ref{ssec:vcpe_archi}, we will give details of the whole vCPE system.
+Our object is to demonstrate that our vCPE system can help the telco to reduce the Capex and Opex when deploying, maintaining and updating CPE service. This section describes our vCPE system architecture and how we achieve our goal. In the subsection \ref{ssec:service_design}, we will introduce the overview architecture of our virtual CPE Service. Then in subsection \ref{ssec:vcpe_deploy}, we will explain that through the advantages of service architecture, our vCPE system can deploy our service to the customer easily. In the subsection \ref{ssec:vcpe_archi}, we will give details of the whole vCPE system.
 
 \subsection{vCPE Service Design Overview}\label{ssec:service_design}
 \begin{figure}[!t]
@@ -546,7 +546,7 @@ Our object is to demonstrate that our vCPE system can help the telco to reduce t
   \caption{vCPE Service Design Architecture}
 \label{fig:service_overview}
 \end{figure}
-With the concept of SDN-enabled\cite{sdn-enabled} VNFs in Fig.\ref{fig:service_overview}, the network functions have been achived by the synergies between compute and network infrastructures. The former is a VNF controller, mainly responsible for dealing with stateful processing. The latter is a SDN switch, used for stateless processing.
+With the concept of SDN-enabled \cite{sdn-enabled} VNFs in Fig. \ref{fig:service_overview}, the network functions have been achived by the synergies between compute and network infrastructures. The former is a VNF controller, mainly responsible for dealing with stateful processing. The latter is a SDN switch, used for stateless processing.
 
 \subsubsection{Stateful Processing component (VNF controller in container)}
 This component have to perform more complex algorithm, keep the state associated with the VNF and provide interface for service providers or customers to configure and update the behavior of the stateless datapath processing component, since software is good at these tasks. We use SDN controller to implement the NFV controller and it's worth noting that we use southbound APIs of SDN controller to handle the interface between the stateful and stateless component with OpenFlow protocol, which was originally designed for this.
@@ -565,9 +565,9 @@ Using the advantages of this architecture, we can assign stateless or light-weig
 \label{fig:vcpe_deploy}
 \end{figure}
 
-With architecure mentioned in\ref{ssec:service_design}, we come up with a network function service deployment model.  Because the algorithm and policies handled by computing infrastructures, and the generic network devices, that is, SDN switches, only do stateless processing. The customer only need to buy a general SDN switch at their home gateway and subscribe different NFV controller through our vCPE platform, they will have a different network function service.
+With architecure mentioned in \ref{ssec:service_design}, we come up with a network function service deployment model.  Because the algorithm and policies handled by computing infrastructures, and the generic network devices, that is, SDN switches, only do stateless processing. The customer only need to buy a general SDN switch at their home gateway and subscribe different NFV controller through our vCPE platform, they will have a different network function service.
 
-In figure\ref{fig:vcpe_deploy} illustrated the service deployment model, each green area is a local network domain of customer. At the gateway of this domain, there's a SDN-enabled switch. The customer can subscribe to our vcpe service through our vcpe dashboard. After subscribing, the vCPE system will create a new docker container, in which running a SDN controller we developed. The customer only need to setup the gateway SDN switch to connect the SDN controller by the OpenFlow protocol, then the switch will handle these service.
+In figure \ref{fig:vcpe_deploy} illustrated the service deployment model, each green area is a local network domain of customer. At the gateway of this domain, there's a SDN-enabled switch. The customer can subscribe to our vcpe service through our vcpe dashboard. After subscribing, the vCPE system will create a new docker container, in which running a SDN controller we developed. The customer only need to setup the gateway SDN switch to connect the SDN controller by the OpenFlow protocol, then the switch will handle these service.
 
 \subsection{Architecture of the vCPE system}\label{ssec:vcpe_archi}
 \subsubsection{System Overview}
@@ -578,7 +578,7 @@ In figure\ref{fig:vcpe_deploy} illustrated the service deployment model, each gr
 \label{fig:vcpe_system}
 \end{figure}
 
-The architecture as shown in Fig\ref{fig:vcpe_system} including of a Infrastructure Controller, Infrastructure Orchestrator, Cloud Database, VNF Controllers and VNF Orchestrator. The Infrastructure Orchestrator, VNF Orchestrator and Cloud Database are web servers running on virtual machines hosting in the cloud using Amazon Web Services (AWS) Data Center also the Infrastructure Controller is a powerful physical blade server running in our laboratory. Each component is introduced in the subsection below.
+The architecture as shown in Fig \ref{fig:vcpe_system} including of a Infrastructure Controller, Infrastructure Orchestrator, Cloud Database, VNF Controllers and VNF Orchestrator. The Infrastructure Orchestrator, VNF Orchestrator and Cloud Database are web servers running on virtual machines hosting in the cloud using Amazon Web Services (AWS) Data Center also the Infrastructure Controller is a powerful physical blade server running in our laboratory. Each component is introduced in the subsection below.
 
 \subsubsection{Infrastructure Controller}
 % shipyard
@@ -596,7 +596,7 @@ The cloud database is used for restoreing the of our vCPE services, which includ
 \subsubsection{VNF Controllers}
 % sdn controller
 
-VNF Controllers contains a SDN controller developed with ryu framework and a remote launcher module. The SDN controller does not have a remote launcher module to remotely execute a SDN controller. We built a light-weight server as a launcher module to resolve the remotely execution issue. The remote launcher module monitor the SDN controller process ID (PID) and properly kill the SDN controller process ID when on demand. When the infrastructure controller once create the container, the remote module will run up initiallly, waiting request from VNF VNF Orchestrator. The details of SDN controller desgin will be presented at section\ref{ssec:vcpe_services}
+VNF Controllers contains a SDN controller developed with ryu framework and a remote launcher module. The SDN controller does not have a remote launcher module to remotely execute a SDN controller. We built a light-weight server as a launcher module to resolve the remotely execution issue. The remote launcher module monitor the SDN controller process ID (PID) and properly kill the SDN controller process ID when on demand. When the infrastructure controller once create the container, the remote module will run up initiallly, waiting request from VNF VNF Orchestrator. The details of SDN controller desgin will be presented at section \ref{ssec:vcpe_services}
 
 
 \subsubsection{VNF Orchestrator}
@@ -612,12 +612,27 @@ Through the web UI provided by the VNF Orchestrator, the customers can subscribe
 \label{fig:vcpe_dashboard}
 \end{figure}
 
-\section{Virtual CPE Services}\label{ssec:vcpe_services}
-\subsection{Multiple Flow Flow Tables}
+\section{vCPE Services}\label{ssec:vcpe_services}
+\subsection{Multiple Flow Flow Tables Strategy}
+In subection \ref{ssec:service_design}, the vCPE service design architecture have been introduced. The network functions are handled by the cooperation between SDN controller on cloud and SDN switch at the local network gateway. The controller transform the network functions to series of OpenFlow rules and send rules requests to SDN switch. Following the command from controller, the SDN switch insert rules to flow tables, checks incoming packets against the flow entry match fields, excute the actions in matching rules. The flow tabe defines all matching and processing, playing an important role to executive network function. Since the restricttion of single table have been discussed in \cite{onf-multi-tables}, we use multiple flow tables strategy to implement our vCPE service.
 
 
+In multiple flow tables strategy, the most important question is: which flow table should we insert rules into? We use the network function as a demarcation, that is, SDN applications which are responsible for specific network functions will only insert rules to one specific flow table. So we can focus on the design of the network function itself. In this way, howerver, the order of flow table become crucial. Should we put flow table of this network function at first, or the other? The answer is about the type of match and action in the rules generated by the network function.
 
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3in]{./figures/multi-table-sequence}
+\caption{The flow table order of our vCPE service}
+\label{fig:table-seq}
+\end{figure}
 
+The network functions of our vCPE services including Forwarding, Firewall, NAT, DHCP and QoS. We have determined the order of each function, shown in \ref{fig:table-seq}.  In the following subsections, we will introduce how to implement these network functions, which type of rules will be inserted to SDN switch, and how these rules affect our decistion of the order of flow tables.
+
+\subsection{Forwarding}
+\subsection{Firewall}
+\subsection{NAT}
+\subsection{DHCP}
+\subsection{QoS}
 
 \newpage
 
